# eudaq

./: roling_register_tb_csv_out_HW.csv  test.csv
cmake/: eudaqTargets-debug.cmake
main/exe/src/: euCliConverter.cxx
main/lib/core/: CMakeLists.txt
main/lib/core/src/: CSV_File_writer.cc  ROOT_FileWriter.cc
monitors/rootmonitor/src/: ROOTMonitorWindow.cc
tmp/: roling_register_tb.csv  roling_register_tb_out_HW.csv  tx_triggerbitsz_top.csv  tx_triggerbitsz_top_header.txt  tx_triggerbitsz_top_out_HW.csv
user/: CMakeLists.txt
user/HMB/: CMakeLists.txt
user/HMB/misc/: Ex0.conf  Ex1.conf  Ex2.conf  Ex3.conf  Ex_update_ip2_ped.conf  HMB_2020-11-09_gauss.conf
user/HMB/module/: CMakeLists.txt
user/HMB/module/src/: HMB_RawEvent2StdEventConverter.cc
user/HMB/python/: HMB_PyProducer.py  roling_register_tb_csv_out_HW.csv  test.txt  tx_triggerbitmonitor_top_header.txt  tx_triggerbitmonitor_top_out_HW.csv
user/example/misc/: Ex1.conf  Ex2.conf  Ex3.conf  Ex_update_ip2_ped.conf
user/example/module/src/: Ex0RawEvent2StdEventConverter.cc
user/example/python/: ExamplePyProducer.py  roling_register_tb_csv.csv  tx_triggerbitmonitor_top.csv
